tester/logCompil/std.ite_error.set.compile.log
srcs/set/ite_error.cpp:27:7: error: cannot assign to return value because function 'operator*' returns a const value
        *ite = 42; // < -- error expected
        ~~~~ ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/bits/stl_tree.h:355:7: note: function 'operator*' which returns const-qualified type 'std::_Rb_tree_const_iterator<int>::reference' (aka 'const int &') declared here
      reference
      ^~~~~~~~~
1 error generated.
